updates to styling for responsiveness

--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,7 @@
       <div class="row" id="header">
         <div class="col-md-12 col-xs-12 col-sm-12">
           <h1>Katherine Nguyen</h1>
-          <p style="font-style: italic; text-indent: 180px;">"Luck is what happens when prepartion meets opportunity"</p>
+          <p>"Luck is what happens when prepartion meets opportunity"</p>
           <img class="circular--landscape" src="images/me4.jpg" alt="Photo of Katherine Nguyen">
         </div>
       </div>
