updates for responsiveness

--- a/client/index.html
+++ b/client/index.html
@@ -110,7 +110,7 @@
             <div class="col-md-6 col-xs-12 portfolio-desc">
               <h3>[Personal Project]</h3>
               <img class="img-responsive" src="images/recippio_screenshot.png">
-              <p>My inspiration was from not being able to figure out what to eat. This web app enables you to take what you have in your very own kitchen (pantry, refigerator, etc.) and find recipes with the ingredients you have. This app is continually being updated and will soon implement more features such as social networking, ratings, history of meals made,...just to name a few. This is a full-stack, single-page, modern and dynamic MEAN (MONGODB, EXPRESSJS, ANGULARJS, NODE.JS) application using a RESTful backend API to serve users and their ingredients. It also uses a well-known recipe API (Spoonacular API) to call for hundreds of thousands of recipes. It also encompasses a full login and registration with encrypted passwords using Bcrypt and Express-Session.</p>
+              <p>My inspiration was from not being able to figure out what to eat. This web app enables you to take what you have in your very own kitchen (pantry, refigerator, etc.) and find recipes with the ingredients you have. This app is continually being updated and will soon implement more features such as social networking, ratings, history of meals made,...just to name a few. This is a full-stack, single-page, modern and dynamic MEAN (MONGODB, EXPRESSJS, ANGULARJS, NODE.JS) application using a RESTful backend API (node.js/expressJS) to serve users and their ingredients. It also consumes a well-known recipe API (Spoonacular API) to call for hundreds of thousands of recipes. It also encompasses a full login and registration with encrypted passwords using Bcrypt and Express-Session.</p>
               <p><a href="https://recippio.herokuapp.com" target="_blank">Visit</a></p>
               <p>Built with:</p>
               <p>
@@ -175,6 +175,8 @@
                 <br>
                 <span class="label label-warning portfolio-label">SQLite</span>
                 <span class="label label-warning portfolio-label">Bootstrap</span>
+                <span class="label label-warning portfolio-label">jQuery UI</span>
+
               </p>
             </div>
           </div>
