updates to toolbox description

--- a/client/index.html
+++ b/client/index.html
@@ -58,30 +58,34 @@
               <span class="label label-warning">jQuery</span>
               <span class="label label-warning">jQuery UI</span>
               <span class="label label-warning">AngularJS</span>
-              <span class="label label-warning"> AJAX</span>
+              <span class="label label-warning">AJAX</span>
+              <span class="label label-warning">JSON</span>
               <br>
               <span style="font-weight: bold; color: #e9ece5">Languages: </span>
               <span class="label label-warning">JavaScript</span>
               <span class="label label-warning">Python</span>
+              <span class="label label-warning">SQL/MySQL</span>
               <span class="label label-warning">Ruby</span>
               <br>
-              <span style="font-weight: bold; color: #e9ece5">Databases: </span>
+              <span style="font-weight: bold; color: #e9ece5">Databases/ORM: </span>
               <span class="label label-warning">SQL(MySQL, SQLite)</span> 
               <span class="label label-warning">NoSQL (MongoDB)</span>
-              <span class="label label-warning">Mongoose.js</span>
+              <span class="label label-warning">MongooseJS</span>
+              <span class="label label-warning">Django ORM</span>
               <br>
               <span style="font-weight: bold; color: #e9ece5">Version Control: </span>
               <span class="label label-warning">Git</span>
               <span class="label label-warning">Github</span>
               <br>
               <span style="font-weight: bold; color: #e9ece5">Servers: </span>
-              <span class="label label-warning"> Nginx</span>
+              <span class="label label-warning">Nginx</span>
               <span class="label label-warning">Node.js</span>
               <br>
               <span style="font-weight: bold; color: #e9ece5">Frameworks: </span>
               <span class="label label-warning">Django</span>
               <span class="label label-warning">Flask</span>
-              <span class="label label-warning">MEAN (MongoDB, ExpresssJS, Angular, Node.js)</span>
+              <span class="label label-warning">Angular.js</span>
+              <span class="label label-warning">Express</span>
               <span class="label label-warning">Express/Socket.io</span>
               <span class="label label-warning">Bootstrap</span>
               <br>
@@ -90,6 +94,10 @@
               <span class="label label-warning">OOP</span>
               <span class="label label-warning">RESTful Architecture</span>
               <span class="label label-warning">Agile (Scrum)</span>
+              <br>
+              <span style="font-weight: bold; color: #e9ece5">Dev Ops: </span>
+              <span class="label label-warning">Heroku</span>
+              <span class="label label-warning">AWS (Amazon EC2)</span>
               <img class="backarrow" src="images/backarrow.png" alt="Back arrow">
           </p>
         </div>
