updates to toolbox

--- a/client/index.html
+++ b/client/index.html
@@ -56,6 +56,7 @@
               <span class="label label-warning">HTML5</span> 
               <span class="label label-warning">CSS3</span>
               <span class="label label-warning">jQuery</span>
+              <span class="label label-warning">Bootstrap</span>
               <span class="label label-warning">jQuery UI</span>
               <span class="label label-warning">AngularJS</span>
               <span class="label label-warning">AJAX</span>
@@ -84,7 +85,7 @@
               <span style="font-weight: bold; color: #e9ece5">Frameworks: </span>
               <span class="label label-warning">Django</span>
               <span class="label label-warning">Flask</span>
-              <span class="label label-warning">Angular.js</span>
+              <span class="label label-warning">AngularJS</span>
               <span class="label label-warning">Express</span>
               <span class="label label-warning">Express/Socket.io</span>
               <span class="label label-warning">Bootstrap</span>
