updates portfolio section and styles

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,7 @@
   <title>Katherine Nguyen | Web Developer</title>
 
   <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet'  type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'  type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet'  type='text/css'>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
@@ -45,7 +46,7 @@
         <div class="col-md-4 col-sm-12 col-xs-12 top" id="about-me">
           <p class="aboutToggle hvr-pulse frontside">about me<span><img class="plussign" src="images/plussign2.png"></span></p>
           <p class="aboutToggle backside" style="display: none">
-            Thank you for visiting! My name is Katherine and I am a Full-stack web developer, eager to keep learning and enhancing my skills. I am currently seeking a position as a Web Developer. Most of my front-end learning was self-taught. I am keen for modern and responsive design and user interfaces. I learned full-stack development through an immersive coding bootcamp (<a href="https://www.codingdojo.com" target="_blank">Coding Dojo</a>) where applications were built using powerful frameworks/stacks like Django and MEAN, implementing MVC architecture, responsive design, version control (git/GitHub), creating APIs/RESTful web services, and deployment to AWS and Heroku. Currently my profession is to manage software development projects working with a team of web developers, serving as their Product Owner, Scrum Master, and Project Manager. Aside from web development, I have a strong passion for music, DJing, travelling, food, and you can catch me browsing through residential real estate properties, I just love homes!
+            A Full-stack web developer, motivated and passionate about building dynamic and beautifully designed web apps. Also a seasoned Project Manager and Product Owner for software development projects, mostly web applications and implementing Saas solutions in the financial/banking/wealth management industry. Certified as a Scrum Product Owner and Scrum Master through the Scrum Alliance. Continually seeking for opportunities as a web developer for innovative companies or freelance work. On my spare time, I’m building my own apps/projects, learning different web technologies, then obsessing over music, DJing, and residential real estate.
             <img class="backarrow" src="images/backarrow.png" alt="Back arrow">
           </p>
         </div>
@@ -73,6 +74,7 @@
               <span class="label label-warning">NoSQL (MongoDB)</span>
               <span class="label label-warning">MongooseJS</span>
               <span class="label label-warning">Django ORM</span>
+              <span class="label label-warning">ActiveRecord</span>
               <br>
               <span style="font-weight: bold; color: #e9ece5">Version Control: </span>
               <span class="label label-warning">Git</span>
@@ -84,17 +86,17 @@
               <br>
               <span style="font-weight: bold; color: #e9ece5">Frameworks: </span>
               <span class="label label-warning">Django</span>
+              <span class="label label-warning">Ruby on Rails</span>
+              <span class="label label-warning">Angular</span>
               <span class="label label-warning">Flask</span>
-              <span class="label label-warning">AngularJS</span>
-              <span class="label label-warning">Express</span>
               <span class="label label-warning">Express/Socket.io</span>
               <span class="label label-warning">Bootstrap</span>
               <br>
               <span style="font-weight: bold; color: #e9ece5">Methodologies: </span>
               <span class="label label-warning">MVC</span>
+              <span class="label label-warning">REST</span>
               <span class="label label-warning">OOP</span>
-              <span class="label label-warning">RESTful Architecture</span>
-              <span class="label label-warning">Agile (Scrum)</span>
+              <span class="label label-warning">Agile Scrum</span>
               <br>
               <span style="font-weight: bold; color: #e9ece5">Dev Ops: </span>
               <span class="label label-warning">Heroku</span>
@@ -117,9 +119,9 @@
           <p class="portfolioToggle hvr-pulse frontside">portfolio<span><img class="plussign" src="images/plussign2.png"></span></p>
           <div class="row portfolioToggle backside portfolio-back" style="display: none">
             <div class="col-md-6 col-xs-12 portfolio-desc">
-              <h3>[Personal Project]</h3>
+              <h2>RECIPPIO</h2>
               <img class="img-responsive" src="images/recippio_screenshot.png">
-              <p>My inspiration was from not being able to figure out what to eat. This web app enables you to take what you have in your very own kitchen (pantry, refigerator, etc.) and find recipes with the ingredients you have. This app is continually being updated and will soon implement more features such as social networking, ratings, history of meals made,...just to name a few. This is a full-stack, single-page, modern and dynamic MEAN (MONGODB, EXPRESSJS, ANGULARJS, NODE.JS) application using a RESTful backend API (node.js/expressJS) to serve users and their ingredients. It also consumes a well-known recipe API (Spoonacular API) to call for hundreds of thousands of recipes. It also encompasses a full login and registration with encrypted passwords using Bcrypt and Express-Session.</p>
+              <p>For those who can't figure out what to eat but have lots of ingredients in their kitchen. Add ingredients from your kitchen and start searching through hundreds of recipes based on your ingredients.</p>
               <p><a href="https://recippio.herokuapp.com" target="_blank">Visit</a></p>
               <p>Built with:</p>
               <p>
@@ -138,23 +140,27 @@
               </p>
             </div>
             <div class="col-md-6 col-xs-12 portfolio-desc">
-              <h3>[Personal Project]</h3>
-              <img class="img-responsive" src="images/ofc_screenshot.png">
-              <p>A website for an Orange County based General Contractor, Oceanfront Construction. As he renovated my own home, I offered to create his website for his business to attract more customers. Note: Domain name is still underway</p>
-              <p><a href="http://54.187.159.236" target="_blank">Visit</a></p>
+              <h2>SCRUMy</h2>
+              <img class="img-responsive" src="images/scrumy.png">
+              <p>Beautifully creates a Sprint Review (Demo) Agenda for Stakeholders. The Agenda handout displays all sprint work (user stories or defects), sprint metrics, team information, and an iteration cumulative flow diagram. The app consumes the Rally Web Services API.</p>
               <p>Built with:</p>
               <p>
-                <span class="label label-warning portfolio-label">Django</span>
+                <span class="label label-warning portfolio-label">Ruby on Rails</span>
+                <span class="label label-warning portfolio-label">SQLite3</span>
                 <span class="label label-warning portfolio-label">Bootstrap</span>
-                <span class="label label-warning portfolio-label">Hover CSS</span>
+                <span class="label label-warning portfolio-label">WickedPDF</span>
+                <span class="label label-warning portfolio-label">Rally Web Services API</span>
                 <span class="label label-warning portfolio-label">jQuery</span>
+                <span class="label label-warning portfolio-label">HTML5</span>
+                <span class="label label-warning portfolio-label">CSS3</span>
+                <span class="label label-warning portfolio-label">Slim</span>
                 <br>
               </p>
             </div>
           </div>
           <div class="row portfolioToggle backside portfolio-back" style="display: none">
             <div class="col-md-6 col-xs-12 portfolio-desc">
-              <h3>[School Project]</h3>
+              <h2>MINI-MEAN STORE</h2>
               <img class="img-responsive" src="images/minimeanstore_screenshot.png" alt="Mini Mean Store screenshot">
               <p>A school project full-stack application built using MEAN technology. This is a web app to create products, customers, and orders, with full CRUD operations using MongoDB/mongoose.js and RESTful routing.</p>
               <p><a href="https://minimeanstore.herokuapp.com" target="_blank">Visit</a></p>
@@ -172,10 +178,9 @@
               </p>
             </div>
             <div class="col-md-6 col-xs-12 portfolio-desc">
-              <h3>[School Project]</h3>
+              <h2>CODING DOJO FRIENDS</h2>
               <a href="images/friendsapp_screenshot1.png" target="_blank"><img style="margin-bottom: 5px" class="img-responsive" src="images/friendsapp_screenshot1.png" alt="Django Friends screenshot 1"></a><a href="images/friendsapp_screenshot2.png" target="_blank"><img class="img-responsive" src="images/friendsapp_screenshot2.png" alt="Django Friends screenshot 2"></a>
               <p>A school project full-stack application built using Python/Django. This is a basic app that demonstrates full CRUD operations, login and registration using Bcrypt, RESTful routing, and MySQL database. In addition, this was an application that was built and deployed to Amazon Web Services in under 4.5 hours, which earned me a "Python Black Belt" at Coding Dojo.</p>
-              <p>[click images above]</p>
               <p>Built with:</p>
               <p>
                 <span class="label label-warning portfolio-label">Django</span>
