adds materialize cdn instead

--- a/client/index.html
+++ b/client/index.html
@@ -7,15 +7,15 @@
   <title>Katherine Eugenio | Web Developer</title>
   <title></title>
   <!-- Compiled and minified CSS -->
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css"> -->
-  <link rel="stylesheet" href="materialize/dist/css/materialize.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+  
   <link rel="stylesheet" href="css/custom.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <script src="jquery/dist/jquery.min.js"></script>
 
   <!-- Compiled and minified JavaScript -->
-  <script src="materialize/dist/js/materialize.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/js/materialize.min.js"></script>
 </head>
 
 <body>
