--- a/client/index.html
+++ b/client/index.html
@@ -46,7 +46,10 @@
   </div>
   <div class="section white scrollspy" id="about">
     <div class="row container">
-      <h2 class="header">About Me<span style="float: right"><img src="images/ke.png" class="circle" alt="image of Katherine Eugenio"></span></h2>
+      <h2 class="header">About Me<i class="material-icons">loyalty</i><span style="float: right"><img src="images/ke.png" class="circle" alt="image of Katherine Eugenio"></span></h2>
+      <!-- <div class="chip chip-about">Katherine Eugenio</div>
+      <div class="chip chip-about">Orange County, CA</div> -->
+      <h5 class="name-intro">Katherine Eugenio | Orange County, CA</h5>
       <p class="grey-text text-darken-3 lighten-3">
         A full-stack web developer, motivated and passionate about building dynamic and beautifully designed web apps. I have a love for web technologies, constantly seeking to learn the latest yet continually improve my skills. With over 6 years as an Agile Product Owner in a professinal environment, leading efforts in bringing product visions to life, as well being a web developer, I am a well-rounded individual in the software development lifecycle, able to contribute and manage not only to your product requirements, but also to implement the code and design. Continually seeking for opportunities as a web developer for innovative companies or freelance work. On my spare time, I'm building my own apps/projects, learning different web technologies, then obsessing over music, DJing, and residential real estate.
       </p>
@@ -59,7 +62,7 @@
 
   <div class="section white scrollspy" id="technical">
     <div class="row container">
-      <h2 class="header">Technical Toolbox</h2>
+      <h2 class="header">Technical Toolbox<i class="material-icons">work</i></h2>
       <p class="grey-text text-darken-3 lighten-3">
         <h5>Frontend</h5>
           <div class="chip">HTML5</div>
@@ -107,7 +110,7 @@
 
   <div class="section white scrollspy" id="connect">
     <div class="row container">
-      <h2 class="header">Connect With Me</h2>
+      <h2 class="header">Connect With Me<i class="material-icons">contact_phone</i></h2>
       <div class="row text_center">
           <div class="col m4">
             <a href="https://github.com/kateugenio" target="_blank"><img src="images/GitHub_Logo.png" class="responsive-img" alt="Github Logo"></a>
@@ -129,7 +132,7 @@
 
   <div class="section white scrollspy" id="portfolio">
     <div class="row container">
-      <h2 class="header">Portfolio/Projects</h2>
+      <h2 class="header">Portfolio<i class="material-icons">view_carousel</i></h2>
 
       <div class="row">
         <div class="col s12 m12">
